--- a/codi/1_Preval_Lectura_Jordi.Rmd
+++ b/codi/1_Preval_Lectura_Jordi.Rmd
@@ -17,7 +17,7 @@ output:
   word_document: default
 
 params:
-  dir_dades: "dades/sidiap" # "dades/test"
+  dir_dades: "dades/test" # "dades/sidiap"
   
 ---
 
@@ -66,6 +66,14 @@ conductor<-"conductor_Prev_DataHarmonization.xlsx"
 ```
 
 
+```{r}
+
+
+
+
+```
+
+
 ## 1. Lectura 
 
 ```{r lectura, include=T}
@@ -74,16 +82,16 @@ directori_dades<-params$dir_dades
 
 # 1 Lectura -----------
 #i        [poblacio] unic [min entrada 1.1.2006!!!]
-LLEGIR.poblacio<-readRDS(directori_dades %>% here::here("DAPCRMM_entregable_poblacio_20190926_103409.rds")) %>% as_tibble() 
+LLEGIR.poblacio<-readRDS(directori_dades %>% here::here("DH/DAPCRMM_entregable_poblacio_20190926_103409.rds")) %>% as_tibble() 
 
 #ii       [diagnostics.hospital.cim9]  mult
-# LLEGIR.cmbdh_diagnostics_padris<-readRDS(directori_dades%>% here::here("DAPCRMM_entregable_cmbdh_diagnostics_padris_20190930_093320.rds")) %>% as_tibble()
+# LLEGIR.cmbdh_diagnostics_padris<-readRDS(directori_dades%>% here::here(""DH/DAPCRMM_entregable_cmbdh_diagnostics_padris_20190930_093320.rds")) %>% as_tibble()
 
 #iii       [diagnostics.cap.cim10]  mult
-LLEGIR.diagnostics<-readRDS(directori_dades %>% here::here("DAPCRMM_entregable_diagnostics_20190926_103409.rds")) %>% as_tibble()
+LLEGIR.diagnostics<-readRDS(directori_dades %>% here::here("DH/DAPCRMM_entregable_diagnostics_20190926_103409.rds")) %>% as_tibble()
 
 #v       
-LLEGIR.variables_socioeconomiques<-readRDS(directori_dades %>% here::here("DAPCRMM_entregable_variables_socioeconomiques_20190926_103409.rds")) %>% as_tibble()
+LLEGIR.variables_socioeconomiques<-readRDS(directori_dades %>% here::here("DH/DAPCRMM_entregable_variables_socioeconomiques_20190926_103409.rds")) %>% as_tibble()
 
 
 
@@ -92,10 +100,11 @@ LLEGIR.variables_socioeconomiques<-readRDS(directori_dades %>% here::here("DAPCR
 
 ```{r, eval=T}
 
-dt_pobl_globdiab<-data.table::fread("dades/globdiab" %>% here::here("GBDIAB_entregable_poblacio_20171017_081430.txt")) %>% as_tibble() 
+dt_pobl_globdiab<-data.table::fread(directori_dades %>% here::here("GBDIAB/GBDIAB_entregable_poblacio_20171017_081430.txt")) %>% as_tibble() 
 
 #ii       [diagnostics.hospital.cim9]  mult
-dt_dg_globdiab<-data.table::fread("dades/globdiab"%>% here::here("GBDIAB_entregable_diagnostics_20171017_081430.txt")) %>% as_tibble()
+dt_dg_globdiab<-data.table::fread(directori_dades %>% here::here("GBDIAB/GBDIAB_entregable_diagnostics_20171017_081430.txt")) %>% 
+  select(idp,cod,dat,dbaixa,agr) %>% as_tibble()
 
 # dt_poblacio %>% summarise(min(entrada), max(entrada))
 # dt_poblacio %>% summarise(min(dnaix), max(dnaix))
